# bookmark-converter

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  codecov.yml  dados_sistema.json  filhos_home.csv  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  refatorar_estrutura.sh  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  trigger_issue.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md  pipeline-failure.md
.github/workflows/: app_pipe.yml
.github/workflows/templates/: shared-setup.yml
docs/: arquitetura.md  index.md
postman/: my_collection.json  openapi.json
scripts/: post_setup.py  pre_setup.py  setup.py
src/: main.py  test__models.py  teste.py
src/controllers/: converter_controller.py  file_controller.py  folder_controller.py  os_controller.py  system_control.py
src/models/: __init__.py  arquivo_model.py  base_system.py  folder_model.py  item_model.py  os_model.py  pasta_model.py  sistema_operacional_model.py  system_enums.py
src/models/polimeros/: __init__.py  monomeros.py
src/utils/: __init__.py  file_tools.py  files_tools.py  folder_tools.py  folders_tools.py  global_tools.py  main_tools.py  sistema_arquivos.py  sistema_operacional.py  sistema_pastas.py  system_info.py  system_path_info.py  system_tools.py  utils_comuns.py
src/views/: system_view.py
tests/unit/models/: test_system_model.py
tests/unit/models/polimeros/: test_monomeros.py
tests/unit/utils/: test_file_tools.py  test_folder_tools.py  test_main_tools.py  test_system_info.py  test_system_tools.py
