# ===================
# METADADOS DO PROJETO
# ===================
[metadata]
name = bookmark-converter
version = 0.1.0
description = Conversor de favoritos para formatos estruturados
long_description = file: README.md
long_description_content_type = text/markdown
author = Pedro Dias
author_email = seu_email@exemplo.com
license = MIT
license_files = LICENSE
url = https://github.com/seuusuario/bookmark-converter
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries

# ===================
# CONFIGURAÇÕES DO SETUPTOOLS
# ===================
[options]
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bookmark-converter = src.main:main

[options.package_data]
* =
    *.md
    *.ini
    *.txt

# ===================
# PYTEST
# ===================
[tool:pytest]
addopts = --cov=src --cov-report=term-missing -v

# ===================
# COVERAGE
# ===================
[coverage:run]
branch = True
source = source

[coverage:report]
omit =
    tests/*
    */__init__.py
show_missing = True
skip_covered = True

# ===================
# MYPY
# ===================
[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
check_untyped_defs = True
warn_unused_ignores = True

# ===================
# LINTER: FLAKE8
# ===================
[flake8]
max-line-length = 150
extend-ignore = E203
ignore = D100,D101,D102,D103,D104,D105,D106,D107
exclude = .git,__pycache__,.mypy_cache,.venv,.venv_app,docs,build,dist

# ===================
# LINTER: PYLINT
# ===================
[pylint]
max-line-length = 150
disable = R0903, R0911

# ===================
# ISORT
# ===================
[isort]
profile = black
line_length = 150
src_paths = src,tests
